objects/commitCustoObj__c.object
<CustomObject>
    <fields>
        <fullName>Field2__c</fullName>
        <label>Field2</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Filed3__c</fullName>
        <label>Filed3</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>LabelPilot__c</fullName>
        <label>LabelPilot</label>
        <type>AutoNumber</type>
    </fields>
</CustomObject>